force-app/main/default/objects/Case/fields/Back_Office_Description__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Description__c</fullName>
    <label>Request Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>