force-app/main/default/objects/Case/fields/Back_Office_Request__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Request__c</fullName>
    <label>Back Office Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashflow</fullName>
            </value>
            <value>
                <fullName>Change Draft Date</fullName>
            </value>
            <value>
                <fullName>Ledger</fullName>
            </value>
            <value>
                <fullName>Payment Decrease</fullName>
            </value>
            <value>
                <fullName>Payment Increase</fullName>
            </value>
            <value>
                <fullName>Projection</fullName>
            </value>
            <value>
                <fullName>Skip Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>