force-app/main/default/objects/Case/fields/Business_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Business_Requirements__c</fullName>
    <label>Business Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>