force-app/main/default/objects/Case/fields/Call_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Call_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if AnswerForce successfully transferred the call to the requested person</inlineHelpText>
    <label>Call Transferred</label>
    <type>Checkbox</type>
</CustomField>