force-app/main/default/objects/Case/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>CASE( RecordType.DeveloperName,
&quot;Welcome_Team&quot;, &quot;WEL-&quot;,
&quot;IT_support&quot;, &quot;IT-&quot;,
&quot;Legal_Team&quot;, &quot;LEG-&quot;,
&quot;Training_Cases&quot;, &quot;TRN-&quot;,
&quot;Client_Support&quot;, &quot;CS-&quot;,
&quot;Collection_Case&quot;, &quot;CL-&quot;,
&quot;GEN-&quot;) 
&amp; CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>