force-app/main/default/objects/Case/fields/Client_Document_Request__c.field-meta.xml
<CustomField>
    <fullName>Client_Document_Request__c</fullName>
    <label>Client Document Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any court document or motion</fullName>
            </value>
            <value>
                <fullName>Bank statements</fullName>
            </value>
            <value>
                <fullName>Copy of Complaints</fullName>
            </value>
            <value>
                <fullName>Correspondence or contact information from Lenders</fullName>
            </value>
            <value>
                <fullName>Detailed Hardship Statement</fullName>
            </value>
            <value>
                <fullName>Service of Process (Summons + Complaints)</fullName>
            </value>
            <value>
                <fullName>Standard Hardship Letter</fullName>
            </value>
            <value>
                <fullName>UCC Lien Notices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>