force-app/main/default/objects/Case/fields/Collection_Stages__c.field-meta.xml
<CustomField>
    <fullName>Collection_Stages__c</fullName>
    <label>Collection Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSF</fullName>
                <default>true</default>
                <label>NSF</label>
            </value>
            <value>
                <fullName>Wire Received</fullName>
            </value>
            <value>
                <fullName>New Draft Scheduled</fullName>
            </value>
            <value>
                <fullName>Duplicate Draft</fullName>
            </value>
            <value>
                <fullName>Payment Defaulted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>