force-app/main/default/objects/Case/fields/Creditors_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Creditors_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Creditor Name</label>
    <referenceTo>CreditorOpportunity__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>