force-app/main/default/objects/Case/fields/Docs_Missing__c.field-meta.xml
<CustomField>
    <fullName>Docs_Missing__c</fullName>
    <label>Docs_Missing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voided Check</fullName>
            </value>
            <value>
                <fullName>Lender Agreements</fullName>
            </value>
            <value>
                <fullName>Bank Statements</fullName>
            </value>
            <value>
                <fullName>Letter of Representation (LoR)</fullName>
            </value>
            <value>
                <fullName>Payoff Letter</fullName>
            </value>
            <value>
                <fullName>EFT Form</fullName>
            </value>
            <value>
                <fullName>No-Fee Retainer Form (DocuSign)</fullName>
            </value>
            <value>
                <fullName>Hardship Letter</fullName>
            </value>
            <value>
                <fullName>Contract/Agreement</fullName>
            </value>
            <value>
                <fullName>Invoice/Receipt</fullName>
            </value>
            <value>
                <fullName>Identification Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>