force-app/main/default/objects/Case/fields/Expected_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Expected_Behavior__c</fullName>
    <label>Expected Behavior</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>