force-app/main/default/objects/Case/fields/Legal_Office__c.field-meta.xml
<CustomField>
    <fullName>Legal_Office__c</fullName>
    <label>Legal Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Law Office of Paul D. Lazarus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>