force-app/main/default/objects/Case/fields/Legal_Representative__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>