force-app/main/default/objects/Case/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Debt Verified</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Fully Executed Settlement</fullName>
                <label>Settlement Executed</label>
            </value>
            <value>
                <fullName>Judgment</fullName>
                <isActive>false</isActive>
                <label>Judgment</label>
            </value>
            <value>
                <fullName>Lawsuit</fullName>
                <isActive>false</isActive>
                <label>Lawsuit</label>
            </value>
            <value>
                <fullName>Payment History Pending</fullName>
                <isActive>false</isActive>
                <label>Payment History Pending</label>
            </value>
            <value>
                <fullName>Payoff Letter Pending</fullName>
                <isActive>false</isActive>
                <label>Payoff Letter Pending</label>
            </value>
            <value>
                <fullName>UCC/Money on Hold</fullName>
                <isActive>false</isActive>
                <label>UCC/Money on Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>