force-app/main/default/objects/Case/fields/Lien_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Lien_Legal_Status__c</fullName>
    <label>Lender Document Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Arbitration Award</fullName>
            </value>
            <value>
                <fullName>COJ</fullName>
            </value>
            <value>
                <fullName>Contract(s)</fullName>
            </value>
            <value>
                <fullName>Judgment</fullName>
            </value>
            <value>
                <fullName>Lawsuit</fullName>
            </value>
            <value>
                <fullName>Notice for Arbitration</fullName>
            </value>
            <value>
                <fullName>Payment History Pending</fullName>
            </value>
            <value>
                <fullName>Payoff Letter Pending</fullName>
            </value>
            <value>
                <fullName>Previous Settlements</fullName>
            </value>
            <value>
                <fullName>Settlement drafts</fullName>
            </value>
            <value>
                <fullName>Stipulation of Settlements</fullName>
            </value>
            <value>
                <fullName>Zero Balance Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>