force-app/main/default/objects/Case/fields/Passed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Passed_Modules__c</fullName>
    <label>Passed Modules</label>
    <summaryFilterItems>
        <field>Training_Module__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Training_Module__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>