force-app/main/default/objects/Case/fields/Ready_for_Legal__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to automatically create legal cases for all creditors</inlineHelpText>
    <label>Ready for Legal</label>
    <type>Checkbox</type>
</CustomField>