force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Legal Queries</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
                <isActive>false</isActive>
                <label>Sales Representative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>