force-app/main/default/objects/Case/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>