force-app/main/default/objects/Case/fields/Service_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Record_Type__c</fullName>
    <label>Service Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Team</fullName>
            </value>
            <value>
                <fullName>Legal Team</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>