force-app/main/default/objects/Case/fields/Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount__c</fullName>
    <label>Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>