force-app/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>From where the case is created</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answer Force</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>