force-app/main/default/objects/Case/fields/talkdesk__Auto_Pop_up_Case__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Auto_Pop_up_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Pop-up Case</label>
    <type>Checkbox</type>
</CustomField>