force-app/main/default/objects/Case/fields/talkdesk__Pop_Up_Destination__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Pop_Up_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pop Up Destination</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>