force-app/main/default/objects/Case/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>