force-app/main/default/objects/Case/fields/Training_Stage__c.field-meta.xml
<CustomField>
    <fullName>Training_Stage__c</fullName>
    <label>Training Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module 1</fullName>
            </value>
            <value>
                <fullName>Module 2</fullName>
            </value>
            <value>
                <fullName>Module 3</fullName>
            </value>
            <value>
                <fullName>Module 4</fullName>
            </value>
            <value>
                <fullName>Module 5</fullName>
            </value>
            <value>
                <fullName>Module 6</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>