force-app/main/default/objects/Case/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>