force-app/main/default/objects/Case/fields/Welcome_Team_Journey__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Team_Journey__c</fullName>
    <label>Welcome Team Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Welcome Email Sent</fullName>
            </value>
            <value>
                <fullName>Welcome SMS Sent</fullName>
            </value>
            <value>
                <fullName>Welcome Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Documents Received</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
            <value>
                <fullName>Welcome Call Rescheduled</fullName>
                <isActive>false</isActive>
                <label>Welcome Call Rescheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>