force-app/main/default/objects/Case/fields/Why_Not_Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>Why_Not_Transferred_To__c</fullName>
    <label>Why Not Transferred To</label>
    <length>220</length>
    <type>Text</type>
</CustomField>