force-app/main/default/objects/Case/recordTypes/Client_Support.recordType-meta.xml
<RecordType>
    <fullName>Client_Support</fullName>
    <active>true</active>
    <businessProcess>Client Support</businessProcess>
    <label>Client Support</label>
</RecordType>