force-app/main/default/objects/Case/recordTypes/Collection_Case.recordType-meta.xml
<RecordType>
    <fullName>Collection_Case</fullName>
    <active>true</active>
    <businessProcess>Collection Process</businessProcess>
    <label>Collection Case</label>
</RecordType>