force-app/main/default/objects/Case/recordTypes/IT_support.recordType-meta.xml
<RecordType>
    <fullName>IT_support</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <label>IT support</label>
</RecordType>