force-app/main/default/objects/Case/recordTypes/Legal_Team.recordType-meta.xml
<RecordType>
    <fullName>Legal_Team</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <label>Legal Team</label>
</RecordType>