force-app/main/default/objects/Case/recordTypes/Training_Cases.recordType-meta.xml
<RecordType>
    <fullName>Training_Cases</fullName>
    <active>true</active>
    <businessProcess>Training Cases</businessProcess>
    <label>Training Cases</label>
</RecordType>