force-app/main/default/objects/Case/recordTypes/Welcome_Team.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Team</fullName>
    <active>true</active>
    <businessProcess>Welcome Team Onboarding</businessProcess>
    <label>Welcome Team</label>
</RecordType>