force-app/main/default/objects/Case/listViews/All_Company_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Company_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Company Open Cases</label>
</ListView>