force-app/main/default/objects/Case/listViews/All_Training_Team_Cases.listView-meta.xml
<ListView>
    <fullName>All_Training_Team_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>Training_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Training_Cases</value>
    </filters>
    <label>All Training Team Cases</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>