force-app/main/default/objects/Case/listViews/All_Welcome_Cases.listView-meta.xml
<ListView>
    <fullName>All_Welcome_Cases</fullName>
    <columns>Case_Number__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Welcome_Team</value>
    </filters>
    <label>All Welcome Cases</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>