force-app/main/default/objects/Case/listViews/Answer_Force_Cases.listView-meta.xml
<ListView>
    <fullName>Answer_Force_Cases</fullName>
    <columns>Case_Number__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Call_Transferred__c</columns>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Answer Force</value>
    </filters>
    <label>Answer Force Cases</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>