force-app/main/default/objects/Case/listViews/Client_Portal_Cases.listView-meta.xml
<ListView>
    <fullName>Client_Portal_Cases</fullName>
    <columns>Case_Number__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Client Portal</value>
    </filters>
    <label>Client Portal Cases</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>