force-app/main/default/objects/Case/listViews/Client_Support_Cases.listView-meta.xml
<ListView>
    <fullName>Client_Support_Cases</fullName>
    <columns>Case_Number__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Finance,Accounting,Collections,Sales Representative,Legal Queries,Customer Support,Payments,Other</value>
    </filters>
    <label>Client Support Cases</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>