force-app/main/default/objects/Case/listViews/Copy_of_All_Company_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Company_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Company Closed Cases</label>
</ListView>