force-app/main/default/objects/Case/listViews/Copy_of_All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Open_Cases</fullName>
    <columns>Case_Number__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
    <sharedTo>
        <group>Administrators</group>
        <group>DCG_Lee</group>
    </sharedTo>
</ListView>