force-app/main/default/objects/Case/listViews/My_Answer_Force_Cases.listView-meta.xml
<ListView>
    <fullName>My_Answer_Force_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Answer Force</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Answer Force Cases</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>