force-app/main/default/objects/Case/listViews/My_Open_Cases.listView-meta.xml
<ListView>
    <fullName>My_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Open Cases</label>
</ListView>