force-app/main/default/objects/Case/listViews/Service_Case_Case.listView-meta.xml
<ListView>
    <fullName>Service_Case_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Service Case</label>
    <queue>Service_Case</queue>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>